@startuml servicos_gestao_backoffice
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Serviços (Módulo: Gestão e Backoffice)

package "Serviço (Interfaces - Gestão e Backoffice)" #E0F0E0 {

  interface IRemessaServico {
    + registarRemessa(utilizador : Utilizador, fornecedor : Fornecedor, linhas : List<LinhaRemessa>, valorTotalGuia : double) : Remessa
    + associarPedidoPendente(remessa : Remessa) : void
    + criarPedidoRemessa(utilizador : Utilizador, fornecedor : Fornecedor, linhas : List<LinhaPedidoRemessa>) : PedidoRemessa
    + listarPedidos(estado : EstadoPedido) : List<PedidoRemessa>
    + obterRemessasPendentes() : List<Remessa>
    + obterPagamentosPendentes() : List<Pagamento>
  }

  interface IPagamentoServico {
    + listarPendentes() : List<Pagamento>
    + liquidar(utilizador : Utilizador, idPagamento : int) : void
  }

  interface IUtilizadorServico {
    + criar(gestor : Utilizador, dados : UtilizadorDTO) : Utilizador
    + desativar(gestor : Utilizador, idAlvo : int) : void
    + editar(gestor : Utilizador, idAlvo : int, dados : UtilizadorDTO) : void
    + validarGestorAtivo(idLoja : String) : void
  }
}

package "Serviço (Implementações - Gestão e Backoffice)" #EEF9F4 {

  class RemessaServico {
    - remessaRepositorio : RemessaRepositorio
    - pedidoRemessaRepositorio : PedidoRemessaRepositorio
    - loteRepositorio : LoteRepositorio
    - pagamentoRepositorio : PagamentoRepositorio
    - auditoriaServico : IAuditoriaServico
    - autorizacaoServico : IAutorizacaoServico
    + registarRemessa(utilizador : Utilizador, fornecedor : Fornecedor, linhas : List<LinhaRemessa>, valorTotalGuia : double) : Remessa
    + associarPedidoPendente(remessa : Remessa) : void
    + criarPedidoRemessa(utilizador : Utilizador, fornecedor : Fornecedor, linhas : List<LinhaPedidoRemessa>) : PedidoRemessa
    + listarPedidos(estado : EstadoPedido) : List<PedidoRemessa>
    + obterRemessasPendentes() : List<Remessa>
    + obterPagamentosPendentes() : List<Pagamento>
  }

  class PagamentoServico {
    - pagamentoRepositorio : PagamentoRepositorio
    - auditoriaServico : IAuditoriaServico
    - autorizacaoServico : IAutorizacaoServico
    + listarPendentes() : List<Pagamento>
    + liquidar(utilizador : Utilizador, idPagamento : int) : void
  }

  class UtilizadorServico {
    - utilizadorRepositorio : UtilizadorRepositorio
    - auditoriaServico : IAuditoriaServico
    - autorizacaoServico : IAutorizacaoServico
    + criar(gestor : Utilizador, dados : UtilizadorDTO) : Utilizador
    + desativar(gestor : Utilizador, idAlvo : int) : void
    + editar(gestor : Utilizador, idAlvo : int, dados : UtilizadorDTO) : void
    + validarGestorAtivo(idLoja : String) : void
  }
}

' Implementações realizam interfaces
RemessaServico ..|> IRemessaServico
PagamentoServico ..|> IPagamentoServico
UtilizadorServico ..|> IUtilizadorServico

' Relações com Repositórios
RemessaServico ..> RemessaRepositorio
RemessaServico ..> PedidoRemessaRepositorio
RemessaServico ..> LoteRepositorio : cria novos lotes
RemessaServico ..> PagamentoRepositorio : agenda pagamento

PagamentoServico ..> PagamentoRepositorio
UtilizadorServico ..> UtilizadorRepositorio

' Serviços transversais
RemessaServico ..> IAutorizacaoServico
PagamentoServico ..> IAutorizacaoServico
UtilizadorServico ..> IAutorizacaoServico

RemessaServico ..> IAuditoriaServico
PagamentoServico ..> IAuditoriaServico
UtilizadorServico ..> IAuditoriaServico

@enduml
